Создано с помощью Colaboratory 2

--- a/18.ipynb
+++ b/18.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMQXKwJSATAYKuNKpuxNzrZ",
+      "authorship_tag": "ABX9TyMBNTR9F1S0+KKLacpOd8PX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,40 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "HJJvgSKrEeH0"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import pandas as pd"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "1+1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "WD7vBO2YI_BT",
+        "outputId": "4f9a8d3d-a272-407a-89b6-76597042f3c3"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
     }
   ]
 }
