Создано с помощью Colaboratory

--- a/18.ipynb
+++ b/18.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP8rncJoEJlYvNnHG2SfUDU",
+      "authorship_tag": "ABX9TyMooj3kUgFoA+u+K2rsSReM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       "metadata": {
         "id": "-KGd-JfJOiaM"
       },
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -45,7 +45,7 @@
       "metadata": {
         "id": "ccaqO8ePOrIC"
       },
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -59,9 +59,9 @@
           "height": 443
         },
         "id": "BchAfZ4_OuK6",
-        "outputId": "e370bb59-7e28-4f1e-ca88-88cee99a01f0"
+        "outputId": "342e5c73-e2e4-49f1-8b3b-e4d0a4cd2010"
       },
-      "execution_count": 18,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -110,7 +110,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c6aebf00-f4e5-46c5-8037-b31633e612e6\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-3ce60551-8ec1-49a5-bb44-98e60d1f8e8a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -400,7 +400,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c6aebf00-f4e5-46c5-8037-b31633e612e6')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3ce60551-8ec1-49a5-bb44-98e60d1f8e8a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -452,12 +452,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-c6aebf00-f4e5-46c5-8037-b31633e612e6 button.colab-df-convert');\n",
+              "        document.querySelector('#df-3ce60551-8ec1-49a5-bb44-98e60d1f8e8a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-c6aebf00-f4e5-46c5-8037-b31633e612e6');\n",
+              "        const element = document.querySelector('#df-3ce60551-8ec1-49a5-bb44-98e60d1f8e8a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -477,8 +477,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-cf9f8faa-b402-4630-ab15-1ee3911b879f\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-cf9f8faa-b402-4630-ab15-1ee3911b879f')\"\n",
+              "<div id=\"df-b6fb9747-c260-49e6-97f4-109b4d8f75b5\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b6fb9747-c260-49e6-97f4-109b4d8f75b5')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -597,7 +597,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-cf9f8faa-b402-4630-ab15-1ee3911b879f button');\n",
+              "        document.querySelector('#df-b6fb9747-c260-49e6-97f4-109b4d8f75b5 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -608,7 +608,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 3
         }
       ]
     },
@@ -632,16 +632,16 @@
           "height": 576
         },
         "id": "Tdly0sk-XC0Q",
-        "outputId": "dbb98714-7a5b-4b8b-ef11-7f757c3c4719"
+        "outputId": "8ebb82b5-37bb-4834-fa77-bb57dde00255"
       },
-      "execution_count": 32,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-32-c44ded798807>:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
-            "  data.corr()\n"
+            "<ipython-input-4-924271c42a44>:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+            "  data.corr() # оценка корреляции\n"
           ]
         },
         {
@@ -701,7 +701,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-bf672733-6477-4586-ac33-a02039fe84e6\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-0a39bec4-0fc8-406d-aa9f-8e2c974eb44a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1014,7 +1014,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bf672733-6477-4586-ac33-a02039fe84e6')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-0a39bec4-0fc8-406d-aa9f-8e2c974eb44a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1066,12 +1066,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-bf672733-6477-4586-ac33-a02039fe84e6 button.colab-df-convert');\n",
+              "        document.querySelector('#df-0a39bec4-0fc8-406d-aa9f-8e2c974eb44a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-bf672733-6477-4586-ac33-a02039fe84e6');\n",
+              "        const element = document.querySelector('#df-0a39bec4-0fc8-406d-aa9f-8e2c974eb44a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1091,8 +1091,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-09874e95-da8c-420c-b3a3-d55535a56dad\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-09874e95-da8c-420c-b3a3-d55535a56dad')\"\n",
+              "<div id=\"df-fb9f295a-c69c-489c-81a7-fd27aa6d405e\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-fb9f295a-c69c-489c-81a7-fd27aa6d405e')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1211,7 +1211,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-09874e95-da8c-420c-b3a3-d55535a56dad button');\n",
+              "        document.querySelector('#df-fb9f295a-c69c-489c-81a7-fd27aa6d405e button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1222,7 +1222,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 4
         }
       ]
     },
@@ -1244,15 +1244,15 @@
           "height": 555
         },
         "id": "7DtGEdIBYhQ6",
-        "outputId": "65c04203-f128-413a-de40-aa384665356b"
+        "outputId": "c9d90619-89c0-41a2-8e8b-07b5fc1c3829"
       },
-      "execution_count": 47,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-47-ac440af31eaf>:4: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+            "<ipython-input-5-ac440af31eaf>:4: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
             "  corr = data.corr()\n"
           ]
         },
@@ -1264,7 +1264,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 5
         },
         {
           "output_type": "display_data",
@@ -1289,12 +1289,159 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "data[\"tempo\"].loc[0:5].sum() # сумма значений в столбце tempo с 0 по 5 строку"
+      ],
       "metadata": {
-        "id": "Hbugq1l5cIsh"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "n_vX8G1Jp8dY",
+        "outputId": "4d9c7b5a-5324-41f2-b077-4ade19d70b35"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "543.2909999999999"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data[\"mode\"].loc[5:55].mean() # среднее значение в столбце mode в диапазоне строк с 5 по 55"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Qc3J22oquCsZ",
+        "outputId": "df3c8054-add3-48cf-e9ac-295a707c4635"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.6470588235294118"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data[\"valence\"].loc[0:100].median() # медиана для столбца valence в диапазоне строк от 0 до 100"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pAc0bOoKuxn-",
+        "outputId": "70510e57-522e-4b42-c38d-0fb6563fd4be"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.511"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data[\"valence\"].loc[0:100].min() # минимум для столбца valence в диапазоне строк от 0 до 100"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E7T3Nal0vVcI",
+        "outputId": "320ac7ce-5457-4ade-e817-9e8c10ed2c76"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.0379"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data[\"valence\"].loc[0:100].max() # максимум для столбца valence в диапазоне строк от 0 до 100"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "syU0KcV7vcTh",
+        "outputId": "7d63d321-e850-44f0-c631-f6039e81397b"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.976"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data[\"valence\"].loc[0:100].std() # стандартное отклонение для столбца valence в диапазоне строк от 0 до 100"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Wt-vEUjivymf",
+        "outputId": "0e7e9644-44ab-4af3-e930-7b943636f955"
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.29376660008035677"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
     }
   ]
 }
