Создано с помощью Colaboratory

--- a/19.ipynb
+++ b/19.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO8LruhtwBgBAgweRCuPq39",
+      "authorship_tag": "ABX9TyObQJNoa0j2N8WL9HOnqS1/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,40 +35,43 @@
       "metadata": {
         "id": "vorlK2c6_3wI"
       },
-      "execution_count": 1,
+      "execution_count": 76,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 77,
       "metadata": {
         "id": "O_Hjl9G15MsR",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "5115aa80-1a2b-4eb5-aae4-26eb6f0251ca"
+        "outputId": "4c6688db-0b26-4e99-9bc1-d5a7c2a704b1"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "ObservationDate    2020-03-22\n",
-              "Province/State      Guangdong\n",
-              "Country/Region          China\n",
-              "Confirmed                52.0\n",
-              "Deaths                    0.0\n",
-              "Recovered                 0.0\n",
-              "Name: 5, dtype: object"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 30
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "RangeIndex: 497 entries, 0 to 496\n",
+            "Data columns (total 6 columns):\n",
+            " #   Column           Non-Null Count  Dtype  \n",
+            "---  ------           --------------  -----  \n",
+            " 0   ObservationDate  497 non-null    object \n",
+            " 1   Province/State   393 non-null    object \n",
+            " 2   Country/Region   497 non-null    object \n",
+            " 3   Confirmed        497 non-null    float64\n",
+            " 4   Deaths           497 non-null    float64\n",
+            " 5   Recovered        497 non-null    float64\n",
+            "dtypes: float64(3), object(3)\n",
+            "memory usage: 23.4+ KB\n"
+          ]
         }
       ],
       "source": [
         "data =  pd.read_csv('datasets_825452_1489843_my_submission.csv')\n",
-        "data.loc[5]"
+        "data.info()"
       ]
     },
     {
@@ -90,9 +93,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K7aMYXl0YvQ-",
-        "outputId": "3c186e7e-8ee9-4060-a893-edeea8738389"
+        "outputId": "2d84691e-13af-4e0e-814b-55c43b44041f"
       },
-      "execution_count": 33,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -113,7 +116,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 78
         }
       ]
     },
@@ -121,16 +124,17 @@
       "cell_type": "code",
       "source": [
         "df = data.drop_duplicates(subset=['Province/State']) # удаление дубликтатов по столбцу\n",
-        "df.info()\n"
+        "df.info()\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "HZQZuPL5az2x",
-        "outputId": "687fecde-f989-4320-a8e1-d6de12d00c38"
+        "outputId": "fcf4988c-a29b-4ef5-b77c-634c4fd134d4"
       },
-      "execution_count": 31,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,33 +160,33 @@
     {
       "cell_type": "code",
       "source": [
-        "497-371"
+        "497-46 # Количество дубликатов в исходной таблице составило 497-46 = 451"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "keWP3vY2ci6W",
-        "outputId": "f703f589-8e6b-4d6f-c4d0-6c892653b398"
+        "outputId": "3c5c2bba-7b7a-4f75-e53f-868185e80773"
       },
-      "execution_count": 36,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "126"
+              "451"
             ]
           },
           "metadata": {},
-          "execution_count": 36
+          "execution_count": 80
         }
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Количество дубликатов в исходной таблице составило 497-371 = 126"
+        "Разделение объединение таблицы"
       ],
       "metadata": {
         "id": "C-DhunTCcLNx"
@@ -190,12 +194,249 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df1 = df.iloc[:23, :] # Выберем первые 23 строчек и все столбцы\n",
+        "df2 = df.iloc[23:, :] # Выберем последующие строчки после 23 и все столбцы\n"
+      ],
       "metadata": {
         "id": "o1fMEKWYcobH"
       },
-      "execution_count": null,
+      "execution_count": 92,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df1.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Rx9_N-_lh2tC",
+        "outputId": "2d79d965-ba06-4e27-ba4f-952214497f21"
+      },
+      "execution_count": 93,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Int64Index: 23 entries, 0 to 22\n",
+            "Data columns (total 6 columns):\n",
+            " #   Column           Non-Null Count  Dtype  \n",
+            "---  ------           --------------  -----  \n",
+            " 0   ObservationDate  23 non-null     object \n",
+            " 1   Province/State   23 non-null     object \n",
+            " 2   Country/Region   23 non-null     object \n",
+            " 3   Confirmed        23 non-null     float64\n",
+            " 4   Deaths           23 non-null     float64\n",
+            " 5   Recovered        23 non-null     float64\n",
+            "dtypes: float64(3), object(3)\n",
+            "memory usage: 1.3+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df2.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ufHMqNDrh8Lw",
+        "outputId": "3e8a5bf1-4a2d-4557-fc4e-3eb3b2d9c80d"
+      },
+      "execution_count": 94,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Int64Index: 23 entries, 23 to 371\n",
+            "Data columns (total 6 columns):\n",
+            " #   Column           Non-Null Count  Dtype  \n",
+            "---  ------           --------------  -----  \n",
+            " 0   ObservationDate  23 non-null     object \n",
+            " 1   Province/State   22 non-null     object \n",
+            " 2   Country/Region   23 non-null     object \n",
+            " 3   Confirmed        23 non-null     float64\n",
+            " 4   Deaths           23 non-null     float64\n",
+            " 5   Recovered        23 non-null     float64\n",
+            "dtypes: float64(3), object(3)\n",
+            "memory usage: 1.3+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result1 = pd.merge(df1, df2, on='ObservationDate', how='inner') # объеденение таблиц по способу inner\n",
+        "result1.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wmpIcOlPjDj9",
+        "outputId": "20dec3da-7d1a-4efa-96e2-c4fa6744054d"
+      },
+      "execution_count": 97,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Int64Index: 299 entries, 0 to 298\n",
+            "Data columns (total 11 columns):\n",
+            " #   Column            Non-Null Count  Dtype  \n",
+            "---  ------            --------------  -----  \n",
+            " 0   ObservationDate   299 non-null    object \n",
+            " 1   Province/State_x  299 non-null    object \n",
+            " 2   Country/Region_x  299 non-null    object \n",
+            " 3   Confirmed_x       299 non-null    float64\n",
+            " 4   Deaths_x          299 non-null    float64\n",
+            " 5   Recovered_x       299 non-null    float64\n",
+            " 6   Province/State_y  276 non-null    object \n",
+            " 7   Country/Region_y  299 non-null    object \n",
+            " 8   Confirmed_y       299 non-null    float64\n",
+            " 9   Deaths_y          299 non-null    float64\n",
+            " 10  Recovered_y       299 non-null    float64\n",
+            "dtypes: float64(6), object(5)\n",
+            "memory usage: 28.0+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result2 = pd.merge(df1, df2, on='ObservationDate', how='left') # объеденение таблиц по способу left\n",
+        "result2.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GiLIcW_-lMlx",
+        "outputId": "667d31d5-f9be-422c-ecb6-0e06f53b4f5e"
+      },
+      "execution_count": 98,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Int64Index: 299 entries, 0 to 298\n",
+            "Data columns (total 11 columns):\n",
+            " #   Column            Non-Null Count  Dtype  \n",
+            "---  ------            --------------  -----  \n",
+            " 0   ObservationDate   299 non-null    object \n",
+            " 1   Province/State_x  299 non-null    object \n",
+            " 2   Country/Region_x  299 non-null    object \n",
+            " 3   Confirmed_x       299 non-null    float64\n",
+            " 4   Deaths_x          299 non-null    float64\n",
+            " 5   Recovered_x       299 non-null    float64\n",
+            " 6   Province/State_y  276 non-null    object \n",
+            " 7   Country/Region_y  299 non-null    object \n",
+            " 8   Confirmed_y       299 non-null    float64\n",
+            " 9   Deaths_y          299 non-null    float64\n",
+            " 10  Recovered_y       299 non-null    float64\n",
+            "dtypes: float64(6), object(5)\n",
+            "memory usage: 28.0+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result3 = pd.merge(df1, df2, on='ObservationDate', how='right') # объеденение таблиц по способу right\n",
+        "result3.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Sw0KD_AAmiiw",
+        "outputId": "35a29eb5-3bbc-423b-d08b-620c0384f3ac"
+      },
+      "execution_count": 100,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Int64Index: 309 entries, 0 to 308\n",
+            "Data columns (total 11 columns):\n",
+            " #   Column            Non-Null Count  Dtype  \n",
+            "---  ------            --------------  -----  \n",
+            " 0   ObservationDate   309 non-null    object \n",
+            " 1   Province/State_x  299 non-null    object \n",
+            " 2   Country/Region_x  299 non-null    object \n",
+            " 3   Confirmed_x       299 non-null    float64\n",
+            " 4   Deaths_x          299 non-null    float64\n",
+            " 5   Recovered_x       299 non-null    float64\n",
+            " 6   Province/State_y  286 non-null    object \n",
+            " 7   Country/Region_y  309 non-null    object \n",
+            " 8   Confirmed_y       309 non-null    float64\n",
+            " 9   Deaths_y          309 non-null    float64\n",
+            " 10  Recovered_y       309 non-null    float64\n",
+            "dtypes: float64(6), object(5)\n",
+            "memory usage: 29.0+ KB\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result4 = pd.merge(df1, df2, on='ObservationDate', how='outer') # объеденение таблиц по способу outer\n",
+        "result4.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jMCVvMyfmqXd",
+        "outputId": "cea696ea-d84c-4c43-abb2-47964418ef9a"
+      },
+      "execution_count": 101,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Int64Index: 309 entries, 0 to 308\n",
+            "Data columns (total 11 columns):\n",
+            " #   Column            Non-Null Count  Dtype  \n",
+            "---  ------            --------------  -----  \n",
+            " 0   ObservationDate   309 non-null    object \n",
+            " 1   Province/State_x  299 non-null    object \n",
+            " 2   Country/Region_x  299 non-null    object \n",
+            " 3   Confirmed_x       299 non-null    float64\n",
+            " 4   Deaths_x          299 non-null    float64\n",
+            " 5   Recovered_x       299 non-null    float64\n",
+            " 6   Province/State_y  286 non-null    object \n",
+            " 7   Country/Region_y  309 non-null    object \n",
+            " 8   Confirmed_y       309 non-null    float64\n",
+            " 9   Deaths_y          309 non-null    float64\n",
+            " 10  Recovered_y       309 non-null    float64\n",
+            "dtypes: float64(6), object(5)\n",
+            "memory usage: 29.0+ KB\n"
+          ]
+        }
+      ]
     }
   ]
 }
